--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,35 @@
-name: Deploy to AWS ECS
+name: Deploy to ECS
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to Amazon ECR
+    - name: Log in to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: hello-world-nodejs
+        ECR_REPOSITORY: hello-world
         IMAGE_TAG: ${{ github.sha }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
     - name: Deploy to ECS
-      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       env:
-        AWS_REGION: us-east-1
-        CLUSTER_NAME: example
-        SERVICE_NAME: example
-        TASK_DEFINITION: ${{ steps.login-ecr.outputs.registry }}/hello-world-nodejs:${{ github.sha }}
-        CONTAINER_NAME: example
-        CONTAINER_PORT: 3000
+        CLUSTER_NAME: hello-world-cluster
+        SERVICE_NAME: hello-world-service
+        IMAGE_URI: ${{ steps.login-ecr.outputs.registry }}/hello-world:${{ github.sha }}
+      run: |
+        aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment --image $IMAGE_URI
